--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-redux-saga",
   "version": "0.1.0",
+  "homepage": "https://peeplilab.github.io/table-demo",
   "private": false,
   "license": "MIT",
   "dependencies": {
@@ -35,11 +36,14 @@
     "eslint-plugin-jest": "^21.18.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.0",
+    "gh-pages": "^4.0.0",
     "prettier": "2.8.1",
     "react-test-renderer": "^16.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
