--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-redux-saga",
   "version": "0.1.0",
-  "homepage": "https://peeplilab.github.io/table-demo",
-  "private": false,
+  "private": true,
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
@@ -14,7 +15,10 @@
     "@mui/styles": "^5.11.0",
     "axios": "^0.21.0",
     "connected-react-router": "^4.5.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "history": "^4.7.2",
+    "jest": "^29.3.1",
     "material-table": "^2.0.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -31,6 +35,9 @@
     "semantic-ui-react": "^0.83.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^8.0.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^21.18.0",
@@ -38,12 +45,13 @@
     "eslint-plugin-react": "^7.11.0",
     "gh-pages": "^4.0.0",
     "prettier": "2.8.1",
-    "react-test-renderer": "^16.5.2"
+    "react-test-renderer": "^16.14.0",
+    "react-unit-test-generator": "^1.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
