--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
+    "@date-io/moment": "^2.16.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
@@ -13,13 +14,18 @@
     "@mui/lab": "^5.0.0-alpha.112",
     "@mui/material": "^5.11.0",
     "@mui/styles": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.11",
     "axios": "^0.21.0",
     "connected-react-router": "^4.5.0",
+    "dayjs": "^1.11.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.7",
     "history": "^4.7.2",
+    "i": "^0.3.7",
     "jest": "^29.3.1",
     "material-table": "^2.0.3",
+    "moment": "^2.29.4",
+    "npm": "^9.2.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
